force-app/main/default/objects/PromoEligibilityRule__c/PromoEligibilityRule__c.object-meta.xml
<CustomObject>
    <label>Promo Eligibility Rule</label>
    <pluralLabel>Promo Eligibility Rules</pluralLabel>
    <nameField>
        <displayFormat>PER-{0000}</displayFormat>
        <label>Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promo Eligibility Rules</relationshipLabel>
        <relationshipName>PromoEligibilityRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RuleJSON__c</fullName>
        <label>Rule JSON</label>
        <length>32768</length>
        <required>true</required>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stackable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stackable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>