force-app/main/default/objects/PromoEligibilityRule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>