force-app/main/default/objects/PromoEligibilityRule__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Promo Eligibility Rules</relationshipLabel>
    <relationshipName>Promo_Eligibility_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>