force-app/main/default/objects/PromoEligibilityRule__c/fields/RuleJSON__c.field-meta.xml
<CustomField>
    <fullName>RuleJSON__c</fullName>
    <label>Rule JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>